实现阶段2模型管理底座
